# nav_bot

./: README.md
docs/: Makefile  conf.py  index.rst  modules.rst  nav_bot.rst  overview.rst
docs/_build/doctrees/: environment.pickle  getting_started.doctree  index.doctree  modules.doctree  nav_bot.doctree  overview.doctree  tb3_controller.doctree
docs/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html  modules.html  nav_bot.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  tb3_controller.html
docs/_build/html/_sources/: getting_started.rst.txt  index.rst.txt  modules.rst.txt  nav_bot.rst.txt  tb3_controller.rst.txt
nav_package/nav_bot/: CMakeLists.txt  package.xml  setup.py
nav_package/nav_bot/config/maps/: map.yaml  map_new.pgm  map_new.yaml
nav_package/nav_bot/launch/: standard_navigation.launch  tb3_navigation.launch  teb_navigation.launch
nav_package/nav_bot/msg/: Task.msg  TaskStatus.msg
nav_package/nav_bot/src/nav_bot/: robot.py
nav_package/tb3_controller/: CMakeLists.txt  package.xml
nav_package/tb3_controller/scripts/: fsm_actions.py
nav_package/turtlebot3_navbot_navigation/: CMakeLists.txt  package.xml
nav_package/turtlebot3_navbot_navigation/launch/: move_base.launch  move_base_teb.launch
nav_package/turtlebot3_navbot_navigation/param/: teb_local_planner_params.yaml
nav_package/turtlebot3_navbot_navigation/rviz/: navbot_navigation.rviz
scripts/: start_experiment.py
