<?xml version="1.0"?>
<package format="2">
  <name>nav_bot</name>
  <version>0.0.1</version>
  <description>
    The main nav_bot package. 
    (1) It launches other ROS packages.
    (2) Contains the required class (and message types) that is used by tb3_controller.
  </description>
  <license>MIT</license>
  <maintainer email="sgtzhiv@gmail.com">Tsvetan Zhivkov</maintainer>
  <author email="sgtzhiv@gmail.com">Tsvetan Zhivkov</author>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3_navigation</url> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  
  
</package>
